reorganize, add real tests

--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "jasmine-memory-webpack-plugin",
+  "name": "jasmine-memory-plug-loader",
   "version": "0.0.0",
-  "description": "webpack plugin to plug block-scope memory leak",
+  "description": "webpack loader to plug jasmine block-scope memory leak",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "webpack": "webpack --config spec/webpack.config.js"
+    "test": "jest",
+    "webpack": "webpack --config test/webpack.config.js",
+    "karma": "karma start",
+    "jasmine": "jasmine"
   },
   "keywords": [
     "jasmine",
     "webpack",
     "memory",
-    "leak"
+    "leak",
+    "loader"
   ],
   "author": "NickCacace",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.1.0",
-    "karma": "^2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-jasmine": "^1.1.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^3.0.0",
+    "babel-jest": "^23.0.1",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0",
+    "memory-fs": "^0.4.1",
     "requirejs": "^2.3.5",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4"
   },
   "dependencies": {
-    "assert": "^1.4.1",
     "ast-types": "^0.11.5",
     "recast": "^0.15.0",
     "webpack-sources": "^1.1.0"
